--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -35,7 +35,7 @@ a ,button{
   }
 button:hover{
   font-weight: bold;
-  border: 3px solid var(--secondary-bg-color);
+/*   border: 2px solid var(--secondary-bg-color); */
   /* outline:0; outline:0; removes the border in the button */
   }
 
